power: Protect against a potential SIGFE

This can only happen if all laptop batteries have zero energy_full.

Resolves https://bugzilla.gnome.org/show_bug.cgi?id=659205